ruby/pykubachu/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pykubachu
  labels:
    app.kubernetes.io/name: pykubachu
    app.kubernetes.io/instance: pykubachu
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pykubachu
    app.kubernetes.io/instance: pykubachu
