ruby/pykubachu/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pykubachu
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - "pykubachu.com"
      secretName: pykubachu.com
  rules:
    - host: "pykubachu.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: pykubachu
              servicePort: http
